2005-10-31 Mariusz Woloszyn
	* src/ptp.c: added more debug, moved property code to properties.c
	* src/ptp.h: added new property handling functions
	* src/ptpcam.c: change verbose meaning (-v detailed info,
	  --verbose=2 and more debug information), introduced properties
	  meaningfull display code
	* src/properties.c: file added; properties values interpretation
	  code
	* src/Makefile.am: added properties.c

2005-10-30 Mariusz Woloszyn
	* src/ptp.c, src/ptp.h: code cleanup and typos fixed;
	  added more comments, introduced ptp_get_datatype_name(),
	  added couple of NIKON properties
	* src/ptpcam.c, src/ptpcam.h: introduced --show-all-properties and
	  --show-unknown-properties (both usefull for debuging)

2005-10-26 Mariusz Woloszyn
	* configure.in: added --with-libusbdir

2005-10-26 Mariusz Woloszyn
	* src/ptpcam.c: add call to usb_set_configuration(); it's a good
	practice and renders windows port working :)

2005-09-29 Mariusz Woloszyn
	* src/ptp-pack.c: fix a bug that caused improper display of 32bit
	  enumerated properties, thanks to Alexander Oelzant for pointing
	  out the bug

2005-09-29 Mariusz Woloszyn
	* configure.in: better libusb version detection implemented
	* src/ptp-pack.c: silence gcc warnings

2005-09-07 Mariusz Woloszyn
	* configure.in, Makefile.am: use myusb only on Linux
	* ptpcam.c: use myusb interface instead of libusb in case of Linux,
	  beside that it works where URB fails it is also abou 20% to 50%
	  faster!!!
	* ptpcam.h: define myusb interface

2005-09-07 Mariusz Woloszyn
	* Initial 1.1.0 commit
	* ptpcam.c: fixed minor bug on usb read
	* ptpcam.h: fixed typo
	* myusb.c: added private usb bulk read/write code
	* configure.in, Makefile.am: updated version added new files, fixed
	  parralel build problem (thanks to Daniel Black for patch)


2005-07-26 Mariusz Woloszyn
	* ptpcam.c: file creation time prserved accross download
2005-07-07 Mariusz Woloszyn
	* ptp.c, ptpcam.c, ptpcam.h: better capture, better error handling,